Fix project item alignment for web.

--- a/assets/sass/components/projectItem.scss
+++ b/assets/sass/components/projectItem.scss
@@ -42,6 +42,7 @@
 
     color: var(--color-fg);
     text-decoration: none;
+    padding-left: $space / 2;
   }
 
   .counter {
